# MDL-Density-Histogram

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: push_to_codeberg.yml  python-app-bad-runner-macos-latest-arm.yml  python-app-bad-runner-windows-11-arm.yml  python-app-bad-runner.yml  python-app.yml  python-publish.yml
src/mdl_density_hist/: mdl_hist.pyx
tests/: gmm3_samples.parquet.brotli  gmm3_samples_MDL_lower_bins.parquet.brotli  gmm4_samples.parquet.brotli  gmm4_samples_MDL_lower_bins.parquet.brotli  gmm5_samples.parquet.brotli  gmm5_samples_MDL_lower_bins.parquet.brotli  test_main.py
