[build-system]
requires = ["setuptools", "cython", "wheel", "numpy>2.1"]
build-backend = "setuptools.build_meta"

[project]
name = "MDL-Density-Histogram"
version = "1.2.0"
requires-python = ">= 3.11"
description = "Cython-accelerated MDL histogram density estimation with dynamic programming, implementing Kontkanen & Myllymaki's algorithm (JMLR 2007)."
authors = [
    {name = "Götz Grimmer", email = "goetz-dev@web.de"}
]
dependencies = [
    "numpy>2.1"
]
license = "Apache-2.0"
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Cython",
    "Operating System :: OS Independent"
]


[project.urls]
Homepage = "https://github.com/MrTarantoga/MDL-Density-Histogram"
Repository = "https://github.com/MrTarantoga/MDL-Density-Histogram"
Issues = "https://github.com/MrTarantoga/MDL-Density-Histogram/issues"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-xdist",
    "pandas",
    "pyarrow",
    "brotli"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

# Optional but recommended if you ship Cython extensions
[tool.setuptools]
include-package-data = true

[tool.cibuildwheel.linux.environment]
CFLAGS = "-O3 -funroll-loops -flto -ftree-vectorize"

[tool.cibuildwheel.macos.environment]
CFLAGS = "-O3 -funroll-loops -flto -ftree-vectorize"

[tool.cibuildwheel.windows.environment]
CFLAGS = "/O2 /GL"
