[build-system]
requires = [
    "setuptools>=82,<83",
    "Cython>=3.2,<3.3",
    "wheel>=0.47,<0.48",
    "numpy>=2.4,<3"
]
build-backend = "setuptools.build_meta"

[project]
name = "MDL-Density-Histogram"
version = "1.2.0"
requires-python = ">= 3.11"
description = "Cython-accelerated MDL histogram density estimation with dynamic programming, implementing Kontkanen & Myllymaki's algorithm (JMLR 2007)."
authors = [
    {name = "Götz Grimmer", email = "goetz-dev@web.de"}
]
dependencies = [
    "numpy>=2.2,<3"
]
license = "Apache-2.0"
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Cython",
    "Operating System :: OS Independent"
]


[project.urls]
Homepage = "https://github.com/MrTarantoga/MDL-Density-Histogram"
Repository = "https://github.com/MrTarantoga/MDL-Density-Histogram"
Issues = "https://github.com/MrTarantoga/MDL-Density-Histogram/issues"

[project.optional-dependencies]
tests = [
    "pytest>=9,<10",
    "pytest-xdist>=3.8,<4",
    "pandas>=3,<4",
    "pyarrow>=24,<25",
    "brotli>=1.2,<2"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

# Optional but recommended if you ship Cython extensions
[tool.setuptools]
include-package-data = true

[tool.cibuildwheel.linux.environment]
CFLAGS = "-O3 -funroll-loops -flto -ftree-vectorize"

[tool.cibuildwheel.macos.environment]
CFLAGS = "-O3 -funroll-loops -flto -ftree-vectorize"

[tool.cibuildwheel.windows.environment]
CFLAGS = "/O2 /GL"
